Add margin between modal title & button

--- a/demo.html
+++ b/demo.html
@@ -1510,7 +1510,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h4 class="modal-title">Source Code</h4>
-              <button type="button" class="btn btn-primary btn-copy"><i class="bi bi-clipboard"></i> Copy Code</button>
+              <button type="button" class="btn btn-primary btn-copy" style="margin-left:1rem;"><i class="bi bi-clipboard"></i> Copy Code</button>
             </div>
             <div class="modal-body">
               <pre class="language-html"><code></code></pre>
